# src/models/dbModels.go
@@ -1,14 +1,20 @@
 package models
 
-import "gorm.io/gorm"
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
 
 type User struct {
-	ID          uint64 `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
-	Username    string `gorm:"column:username;uniqueIndex" json:"username"`
-	Password    string `gorm:"column:password" json:"password"`
-	PanCard     string `gorm:"column:panCard;uniqueIndex" json:"panCard"`
-	PhoneNumber uint64 `gorm:"column:phoneNumber" json:"phoneNumber"`
-	Email       string `gorm:"column:email;uniqueIndex" json:"email"`
+	ID           uint64    `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
+	Username     string    `gorm:"column:username;uniqueIndex" json:"username"`
+	Password     string    `gorm:"column:password" json:"password"`
+	PanCard      string    `gorm:"column:panCard;uniqueIndex" json:"panCard"`
+	PhoneNumber  uint64    `gorm:"column:phoneNumber" json:"phoneNumber"`
+	Email        string    `gorm:"column:email;uniqueIndex" json:"email"`
+	OtpSent      uint64    `json:"otpSent" gorm:"column:otpSent;default:null"`
+	OtpExpiresAt time.Time `json:"otpExpiresAt" gorm:"column:otpExpiresAt;default:null"`
 }
 
 type DatabaseConfiguration struct {
